@@ -7,17 +7,11 @@ describe Heirloom::Catalog::Add do
     @base        = 'base'
     @logger_stub = stub 'logger', :info => true
     @config_stub = stub 'config', :logger => @logger_stub
-    @verify_mock = mock 'verify'
-    Heirloom::Catalog::Verify.should_receive(:new).
-                              with(:config => @config_stub).
-                              and_return @verify_mock
-    @add         = Heirloom::Catalog::Add.new :config => @config_stub,
-                                              :name   => 'new_archive'
+    @add = Heirloom::Catalog::Add.new :config => @config_stub,
+                                      :name   => 'new_archive'
   end
 
   it "should call sdb to add the entry to the catalog" do
-    @verify_mock.should_receive(:entry_exists_in_catalog?).
-                 and_return false
     @sdb_mock = mock 'sdb'
     Heirloom::AWS::SimpleDB.should_receive(:new).
                             with(:config => @config_stub).
@@ -29,13 +23,6 @@ describe Heirloom::Catalog::Add do
                      "base"    => @base }
     @add.add_to_catalog :regions => @regions,
                         :base    => @base
-  end
-
-  it "should return false if the entry already exists" do
-    @verify_mock.should_receive(:entry_exists_in_catalog?).
-                 and_return true
-    @add.add_to_catalog(:regions => @regions,
-                        :base    => @base).should be_false
   end
 
 end
