@@ -2,6 +2,7 @@
 
 * Addign catalog which will contain all heirloom regions & bases.
 * CLI will lookup base & region from catalog.
+* Removing base requirement for all subcmds outside download & setup.
 * Added teardown command to delete domains & buckets.
 * Enclosing simpledb domains in `s
 
